Bug 145311 - EDITING Hovering over an empty list item will turn the empty list item into an insertion
Summary: EDITING Hovering over an empty list item will turn the empty list item into a...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: filter:odt
Depends on:
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2021-10-25 11:38 UTC by NISZ LibreOffice Team
Modified: 2021-12-08 08:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (9.17 KB, application/vnd.oasis.opendocument.text)
2021-10-25 11:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (8.79 KB, image/jpeg)
2021-10-25 11:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-25 11:38:22 UTC
Description:
With change tracking enabled, moving over the last list item to the first place it will change empty list item into an insertion

Steps to Reproduce:
1. Open attached document
2. Move “March” from last place to the first

Actual Results:
There will be a new list item “3”.

Expected Results:
It should be the same number of list items


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9bcdfcb74dae7ccd07be7159c0e1deba110d2a6f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2021-10-25 11:39:25 UTC
Created attachment 175904 [details]
Example file from Writer
Comment 2 NISZ LibreOffice Team 2021-10-25 11:39:45 UTC
Created attachment 175905 [details]
Screenshot of the problem in Writer
Comment 3 Commit Notification 2021-11-03 13:15:48 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/643bbf9e47e909b2d4acefaee791c9dd7d9e4a8d

tdf#145311 sw track changes: fix moving over empty list item

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2021-12-08 08:42:47 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3a61cce54277fd12570103a191c50d9b37ef3dd3
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL