tdf#145311 sw track changes: fix moving over empty list item

which was changed to tracked insertion.

Follow-up to commit 4c982dbafdac900e233d7b68d95c9c99244defc1
"tdf#145225 sw track changes: fix bad insert at moving".

Change-Id: If3d70da71188e95b5aeea9b72e7c9de22d7c7150